--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "FaceDetector"]
 	path = FaceDetector
-	url = https://github.com/faciallab/FaceDetector.git
+	url = http://118.31.44.251:3000/DeepInsight/mtcnn-pytorch.git
